trying to fix bug: i couldn't see img background on mobile

--- a/styles.css
+++ b/styles.css
@@ -68,13 +68,13 @@ body {
 
 /* ------------------ Main content: first block, second block ------------------ */
 main {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 
 #first-block {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     /*background-color: yellow;*/
     display: flex;
     justify-content: center;
